#139/1/picture fix, elements alignment

--- a/static/styles/_defaultButton.scss
+++ b/static/styles/_defaultButton.scss
@@ -80,8 +80,7 @@
   }
   &-modalBtn {
     width: 49%;
-    padding: 10px;
-    font-size: 24px;
+    font-size: 18px;
     height: 70px;
     margin: 0 0 0 10px;
     color: $white-color;
