--- a/static/styles/_modalStyles.scss
+++ b/static/styles/_modalStyles.scss
@@ -35,6 +35,10 @@
     text-align: center;
     margin: 0.1rem;
   }
+  &__builder {
+    display: flex;
+    margin-top: 20px;
+  }
   &__button {
     background-color: $orange;
     border-radius: $default-radius;
@@ -54,13 +58,12 @@
     flex-direction: column;
   }
   &__input {
-    height: 64px;
+    height: 70px;
     width: 49%;
     padding-left: 24px;
     border: 4px solid #c4c4c4;
     border-radius: 8px;
     font-size: 0.5rem;
-    margin: 30px 0;
   }
   &__label {
     font-size: 16px;
@@ -80,25 +83,26 @@
   }
   &__table {
     min-height: 200px;
+    max-height: 350px;
     display: flex;
     justify-content: space-around;
     padding: 0.5rem;
     border-bottom: 2px solid rgb(98, 98, 98);
-    justify-content: space-around;
+    // justify-content: space-around;
     flex-direction: column;
     overflow: auto;
-    margin-top: 10pxś;
+    margin-top: 10px;
   }
   &__thead {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
   tbody {
     overflow-y: scroll;
   }
   &__tbody {
     display: flex;
-    max-height: 400px;
+    max-height: 300px;
     justify-content: center;
   }
   &__text {
@@ -110,15 +114,13 @@
   &__td {
     img {
       border: none !important;
-      height: 100% !important;
+      height: 60px !important;
       width: auto !important;
       border-radius: 10px !important;
       filter: none !important;
     }
-    display: flex;
-    justify-content: center;
     max-width: 30%;
-    max-height: 60px;
+    // max-height: 60px;
     font-size: 16px;
   }
   &__th {
